--- a/webapp/Gemfile
+++ b/webapp/Gemfile
@@ -9,6 +9,8 @@ gem 'sqlite3'
 
 gem 'json'
 
+gem 'devise'
+
 # Gems used only for assets and not required
 # in production environments by default.
 group :assets do
@@ -37,3 +39,4 @@ gem 'jquery-rails'
 
 # To use debugger
 # gem 'ruby-debug'
+
