--- a/webapp/Gemfile
+++ b/webapp/Gemfile
@@ -11,6 +11,8 @@ gem 'json'
 
 gem 'devise'
 
+gem 'paperclip'
+
 # Gems used only for assets and not required
 # in production environments by default.
 group :assets do
