--- a/webapp/Gemfile
+++ b/webapp/Gemfile
@@ -13,6 +13,10 @@ gem 'devise'
 
 gem 'paperclip'
 
+gem 'omniauth'
+gem 'omniauth-facebook'
+gem 'omniauth-twitter'
+
 # Gems used only for assets and not required
 # in production environments by default.
 group :assets do
