--- a/webapp/Gemfile
+++ b/webapp/Gemfile
@@ -11,7 +11,15 @@ gem 'json'
 
 gem 'devise'
 
+
+#MATT - 
 gem 'paperclip'
+gem 'rmagick'
+gem 'carrierwave'
+gem 'jquery-rails'
+
+
+
 
 gem 'omniauth'
 gem 'omniauth-facebook'
@@ -29,7 +37,7 @@ group :assets do
   gem 'uglifier', '>= 1.0.3'
 end
 
-gem 'jquery-rails'
+
 
 # To use ActiveModel has_secure_password
 # gem 'bcrypt-ruby', '~> 3.0.0'
