twitter bootstrap, image display

--- a/webapp/Gemfile
+++ b/webapp/Gemfile
@@ -35,6 +35,9 @@ group :assets do
   gem 'therubyracer', :platforms => :ruby
 
   gem 'uglifier', '>= 1.0.3'
+  
+  gem 'twitter-bootstrap-rails'
+  gem "less-rails"
 end
 
 
