--- a/webapp/Gemfile
+++ b/webapp/Gemfile
@@ -17,6 +17,7 @@ gem 'paperclip'
 gem 'rmagick'
 gem 'jquery-rails'
 gem 'bootstrap-sass', '2.1'
+gem 'debugger', group: [:development, :test]
 
 gem 'jquery-fileupload-rails'
 gem 'paperclip'
