--- a/webapp/Gemfile
+++ b/webapp/Gemfile
@@ -42,6 +42,9 @@ group :assets do
   gem "less-rails"
 end
 
+group :development do
+  gem 'annotate', '2.5.0'
+end
 
 
 # To use ActiveModel has_secure_password
