--- a/webapp/test/fixtures/photos.yml
+++ b/webapp/test/fixtures/photos.yml
@@ -9,6 +9,7 @@
 #  photo_updated_at   :datetime
 #  created_at         :datetime         not null
 #  updated_at         :datetime         not null
+#  pool_id            :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
