--- a/webapp/Gemfile
+++ b/webapp/Gemfile
@@ -19,7 +19,6 @@ gem 'jquery-rails'
 gem 'jquery-fileupload-rails'
 gem 'debugger', group: [:development, :test]
 
-
 gem 'paperclip'
 
 
@@ -31,6 +30,7 @@ gem 'omniauth-twitter'
 # in production environments by default.
 group :assets do
   gem 'sass-rails',   '~> 3.2.3'
+  gem 'bootstrap-sass', '~> 2.3.2.0'
   gem 'coffee-rails', '~> 3.2.1'
 
   # See https://github.com/sstephenson/execjs#readme for more supported runtimes
@@ -40,6 +40,8 @@ group :assets do
   
   gem 'twitter-bootstrap-rails'
   gem "less-rails"
+  
+  
 end
 
 group :development do
