--- a/webapp/Gemfile
+++ b/webapp/Gemfile
@@ -48,6 +48,7 @@ group :development do
   gem 'annotate', '2.5.0'
 end
 
+gem 'bootstrap-addons-rails'
 
 # To use ActiveModel has_secure_password
 # gem 'bcrypt-ruby', '~> 3.0.0'
